# sonem-rs

./: Cargo.toml
src/: lexer.rs  main.rs  syntax.rs
src/syntax/: parser.rs  trees.rs
valid/: example
