[package]
name = "sonem-rs"
version = "0.1.0"
authors = ["Aaron Yeoh Cruz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
